Actually fix overflow-x issue being caused by skills Framer Motion element

--- a/src/app/components/about/AboutSection.module.scss
+++ b/src/app/components/about/AboutSection.module.scss
@@ -1,6 +1,10 @@
 @import "../../../styles/variables.module.scss",
   "../../../styles/mixins.module.scss";
 
+.overflow-clip {
+  overflow-x: clip;
+}
+
 .about-section {
   background: $color-neutral-100;
   & .heading {
